using Grpc.Core;
using Chat;
using System.Collections.Concurrent;

namespace GrpcDemo;

public class ChatHubService : ChatService.ChatServiceBase
{
    private readonly ILogger<ChatHubService> _logger;
    private static readonly ConcurrentDictionary<string, IServerStreamWriter<ChatMessage>> _connectedClients = new();
    private static int _messageCounter = 0;

    public ChatHubService(ILogger<ChatHubService> logger)
    {
        _logger = logger;
    }

    // Streaming bidirectionnel pour le chat
    public override async Task Chat(IAsyncStreamReader<ChatMessage> requestStream, IServerStreamWriter<ChatMessage> responseStream, ServerCallContext context)
    {
        var clientId = $"ChatUser-{Random.Shared.Next(1000, 9999)}";
        var clientInfo = $"Client {clientId} depuis {context.Peer}";
        
        _logger.LogInformation("üîµ CHAT HUB - Nouveau client connect√©: {ClientId}", clientId);
        
        try
        {
            // Ajouter le client √† la liste des clients connect√©s
            _connectedClients.TryAdd(clientId, responseStream);
            
            // Notifier tous les autres clients de la nouvelle connexion
            await BroadcastMessage($"üëã {clientId} a rejoint le chat!", "system", clientId);
            
            // √âcouter les messages de ce client
            await foreach (var request in requestStream.ReadAllAsync(context.CancellationToken))
            {
                _logger.LogInformation("üîµ CHAT HUB - Message re√ßu de {ClientId}: {Message}", clientId, request.Message);
                
                // Relayer le message √† tous les clients connect√©s (y compris l'exp√©diteur)
                await BroadcastMessage(request.Message, "chat", request.ClientId);
            }
        }
        catch (OperationCanceledException)
        {
            _logger.LogInformation("‚ùå CHAT HUB - Client {ClientId} d√©connect√©", clientId);
        }
        finally
        {
            // Retirer le client de la liste des clients connect√©s
            _connectedClients.TryRemove(clientId, out _);
            
            // Notifier tous les autres clients de la d√©connexion
            await BroadcastMessage($"üëã {clientId} left the chat!", "system", clientId);
            
            _logger.LogInformation("‚úÖ CHAT HUB - Client {ClientId} d√©connect√© proprement", clientId);
        }
    }

    private async Task BroadcastMessage(string message, string messageType, string senderId)
    {
        var response = new ChatMessage
        {
            ClientId = senderId,
            Message = message,
            Timestamp = DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss.fff"),
            MessageType = messageType
        };

        var tasks = new List<Task>();
        var clientsToRemove = new List<string>();

        foreach (var client in _connectedClients)
        {
            try
            {
                // Ajouter l'identifiant de l'exp√©diteur au message
                if (messageType == "chat")
                {
                    response.Message = $"[{senderId}] {message}";
                }
                
                tasks.Add(client.Value.WriteAsync(response));
            }
            catch (Exception ex)
            {
                _logger.LogWarning("‚ö†Ô∏è CHAT HUB - Erreur envoi √† {ClientId}: {Error}", client.Key, ex.Message);
                clientsToRemove.Add(client.Key);
            }
        }

        // Nettoyer les clients d√©connect√©s
        foreach (var clientId in clientsToRemove)
        {
            _connectedClients.TryRemove(clientId, out _);
        }

        // Attendre que tous les messages soient envoy√©s
        await Task.WhenAll(tasks);
        
        _logger.LogInformation("üü¢ CHAT HUB - Message diffus√© √† {ClientCount} clients: {Message}", 
            _connectedClients.Count, response.Message);
    }

    // Method to get the number of connected clients
    public static int GetConnectedClientsCount()
    {
        return _connectedClients.Count;
    }
}
